# glyphsLib

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.builder.md  README.md  README.rst  casting.py  glyphslib.py  interpolation.py  noto_pytest.ini  parser.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.sh  setup.cfg  setup.py  torf.py  tox.ini
.github/workflows/: ci.yml  regression.yml  test.yml
Lib/glyphs2ufo/: __main__.py  builder.py  builder_test.py  casting.py  casting_test.py  glyphslib.py  interpolation.py  parser.py  torf.py  torf_test.py
Lib/glyphsLib/: __init__.py  __main__.py  anchors.py  builder.py  builder_test.py  casting.py  casting_test.py  classes.py  cli.py  designSpaceDocument.py  dictParser.py  glyphdata.py  glyphdata_generated.py  glyphsFileWriter.py  interpolation.py  parser.py  parser_test.py  pens.py  roundtrip.py  types.py  util.py  writer.py
Lib/glyphsLib/affine/: __init__.py
Lib/glyphsLib/builder/: __init__.py  anchor_propagation.py  anchors.py  annotations.py  axes.py  background_image.py  blue_values.py  bracket_layers.py  builders.py  color_layers.py  common.py  components.py  constants.py  context.py  custom_params.py  features.py  filters.py  font.py  glyph.py  glyphs.py  groups.py  guidelines.py  hints.py  instances.py  interpolation.py  kerning.py  layers.py  masters.py  names.py  paths.py  smart_components.py  sources.py  tokens.py  ufo.py  user_data.py
Lib/glyphsLib/builder/transformations/: __init__.py  align_alternate_layers.py  intermediate_layers.py  propagate_anchors.py
Lib/glyphsLib/data/: GlyphData_AGL_LICENSE  GlyphData_Ideographs.xml
Lib/glyphsLib/featureWriters/: markFeatureWriter.py
Lib/glyphsLib/filters/: cornerComponents.py  eraseOpenCorners.py
Lib/glyphsLib/parser/: __init__.py  v3.py
MetaTools/: generate_glyphdata.py
tests/: all_to_ufos.py  axes_test.py  builder_test.py  casting_test.py  classes_test.py  conftest.py  corner_components_test.py  dictparser_test.py  eraseOpenCorners_test.py  feature_writers_test.py  gf_regression.py  glyphdata_test.py  glyphs3_test.py  interpolation_test.py  lib_and_user_data_test.py  link_metrics_test.py  main_test.py  parser_test.py  parser_v3_test.py  pen_test.py  regression_test.py  roundtrip_test.py  run_roundtrip_on_noto.py  run_various_tests_on_various_files.py  smart_components_test.py  specal_layer_width_test.py  special_layer_width_test.py  test_helpers.py  tokens_test.py  types_test.py  util_test.py  writer_test.py
tests/builder/: __init__.py  anchors_test.py  axes_test.py  builder_test.py  components_test.py  custom_params_test.py  designspace_gen_test.py  designspace_roundtrip_test.py  features_test.py  filters_test.py  fontinfo_test.py  instances_test.py  interpolation_test.py  lib_and_user_data.uml  lib_and_user_data_test.py  preflight_test.py  properties_test.py  roundtrip_test.py  stylemap_test.py  to_glyphs_test.py
tests/builder/transformations/: align_alternate_layers_test.py  propagate_anchors_test.py
tests/data/: AlignAlternateLayers-g2.glyphs  AlignAlternateLayers-g3.glyphs  Alignment Zone Test.designspace  Alternate-g3-axis1.glyphs  AnchorAttachmentTest.glyphs  AnchorPropagation.glyphs  AxesWdth.glyphs  AxesWdthWght.glyphs  BraceCompositev3.glyphs  BraceTestFont.glyphs  BraceTestFontV3.glyphs  BracketTestFont.glyphs  BracketTestFont2.glyphs  BracketTestFontKerning.glyphs  BracketTestFont_v3.glyphs  BuildFontInCode.glyphs  ColorColrCpalFont.glyphs  ColorComponents.glyphs  CommentedClass.glyphs  ComponentsWithIntermediates.glyphs  ContextualAnchors.glyphs  CornerComponents.glyphs  Custom Parameter Full Test.glyphs  CustomGlyphData.xml  CustomParameterMultiple.glyphs  CustomParameterVFO-noVFO.glyphs  CustomParameterVFO-oldname.glyphs  CustomParameterVFO.glyphs  CustomPrametersTest.glyphs  DesignspaceGenTestItalic.designspace  DesignspaceGenTestRegular.designspace  DesignspaceTestAxisLocation.designspace  DesignspaceTestBasic.designspace  DesignspaceTestFamilyName.designspace  DesignspaceTestFileName.designspace  DesignspaceTestInactive.designspace  DesignspaceTestInstanceOrder.designspace  DesignspaceTestRemoveGlyphs.designspace  DesignspaceTestRenameGlyphs.designspace  DesignspaceTestTwoAxes.designspace  (+56 more)
tests/data/Alignment Zone Test.ufo/: fontinfo.plist  layercontents.plist  lib.plist  metainfo.plist
tests/data/Alignment Zone Test.ufo/glyphs/: A_.glif  contents.plist
tests/data/BracketSelfReference/: BracketSelfReference.designspace
tests/data/BracketSelfReference/BracketSelfReference-Bold.ufo/: fontinfo.plist  lib.plist
tests/data/BracketSelfReference/BracketSelfReference-Regular.ufo/: fontinfo.plist  lib.plist
tests/data/EraseOpenCornersIncompatibilityTest-One.ufo/: fontinfo.plist  lib.plist
tests/data/EraseOpenCornersIncompatibilityTest-Two.ufo/: fontinfo.plist  lib.plist
tests/data/GlyphsUnitTestSans3.glyphspackage/: UIState.plist  fontinfo.plist  order.plist
tests/data/Playfair-dollar.glyphspackage/: fontinfo.plist  order.plist
tests/data/ReservedNames.glyphspackage/: UIState.plist  fontinfo.plist  order.plist
tests/data/TestReencode-Regular.ufo/: fontinfo.plist
tests/data/designspace/: .gitignore
tests/data/gf/: .gitignore  AlexBrush.glyphs  Allura.glyphs  AndadaPro.glyphs  Anton.glyphs  Antonio.glyphs  Asap-Italic.glyphs  Asap.glyphs  AzeretMono-Italic.glyphs  AzeretMono.glyphs  BigShoulders.glyphs  Bilbo-Regular.glyphs  BilboPro.glyphs  BonaNova-Italic.glyphs  BonaNova.glyphs  Brygada1918-Italic.glyphs  Brygada1918.glyphs  Caveat-Brush.glyphs  CherryBomb.glyphs  Chokokutai.glyphs  DarumaDropOne.glyphs  GreatVibes-Pro.glyphs  Imbue.glyphs  Italianno.glyphs  Karla-Italic.glyphs  Karla-Roman.glyphs  Kufam_Arabic_Latin_Roman_Master.glyphs  Kufam_Latin_Italic_Master.glyphs  Langar.glyphs  Oi.glyphs  Playball.glyphs  Qwigley.glyphs  aoboshi.glyphs
tests/downloaded/: .gitignore
tests/tools/: generate_regression_test_files.py  run_various_tests_on_various_files.py
(+33 files in other folders)
