[metadata]
name = glyphsLib
description = A bridge from Glyphs source files (.glyphs) to UFOs
long_description = file: README.rst
url = https://github.com/googlefonts/glyphsLib
author = James Godfrey-Kittle
author_email = jamesgk@google.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based

[options]
package_dir = =Lib
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
    wheel
install_requires =
    defcon >= 0.3.0
    fonttools >= 3.24.0

[options.extras_require]
ufo_normalization = ufonormalizer

[options.package_data]
glyphsLib = data/*.xml, data/GlyphData_LICENSE

[options.packages.find]
where = Lib

[options.entry_points]
console_scripts =
    glyphs2ufo = glyphsLib.cli:_glyphs2ufo_entry_point
    ufo2glyphs = glyphsLib.cli:_ufo2glyphs_entry_point

[bdist_wheel]
universal = 0

[sdist]
formats = zip

[flake8]
select = B, C, E, F, W, T4, B9
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
